# rocker-error-responder

./: Cargo.toml  README.md
rocket_error_responder/: Cargo.toml
rocket_error_responder_derive/: Cargo.toml
rocket_simple_responder/: Cargo.toml
rocket_simple_responder/src/: lib.rs
rocket_simple_responder/tests/: enum.rs  struct.rs
rocket_simple_responder_derive/: Cargo.toml
rocket_simple_responder_derive/src/: lib.rs  utils.rs
src/: attrs.rs  lib.rs  utils.rs
tests/: enum.rs  generics.rs  struct.rs
