[package]
name = "rocket_simple_responder"
description = "A simple rocket responder derive macro"
repository = "https://github.com/weiwei-lin/rocket-simple-responder"
version = "0.0.1"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "9671115" }
rocket_simple_responder_derive = { version = "0.0.1", path = "../rocket_simple_responder_derive" }

[dev-dependencies]
thiserror = "1.0.23"
tokio = "0.2"
