[package]
name = "rocket_simple_responder_derive"
version = "0.0.1"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = "1.0.54"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "9671115" }
